--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
             </intent-filter>
         </receiver> <!-- 开启自启动 -->
 
-        <service
+        <!--<service
             android:name=".myService"
             android:enabled="true"
             android:exported="false"
@@ -49,6 +49,16 @@
             <meta-data
                 android:name="android.accessibilityservice"
                 android:resource="@xml/accessibility"/>
+        </service>-->
+        <service
+            android:name=".myService"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/accessibility" />
         </service>
 
         <service android:name="com.amap.api.location.APSService" />
